--- a/package.json
+++ b/package.json
@@ -1,18 +1,37 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
-    },
-    "devDependencies": {
-        "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
-    }
+	"private": true,
+	"scripts": {
+		"dev": "npm run development",
+		"development": "mix",
+		"watch": "mix watch",
+		"watch-poll": "mix watch -- --watch-options-poll=1000",
+		"hot": "mix watch --hot",
+		"prod": "npm run production",
+		"production": "mix --production"
+	},
+	"devDependencies": {
+		"@babel/preset-react": "^7.18.6",
+		"@emotion/react": "^11.10.5",
+		"@emotion/styled": "^11.10.5",
+		"@mui/icons-material": "^5.10.15",
+		"@mui/material": "^5.10.14",
+		"@mui/types": "^7.2.1",
+		"@types/react": "^18.0.25",
+		"@types/react-dom": "^18.0.9",
+		"@types/react-router-dom": "^5.3.3",
+		"axios": "^0.21",
+		"browser-sync": "^2.27.10",
+		"browser-sync-webpack-plugin": "^2.3.0",
+		"laravel-mix": "^6.0.6",
+		"lodash": "^4.17.19",
+		"postcss": "^8.1.14",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.4.3",
+		"resolve-url-loader": "^5.0.0",
+		"sass": "^1.56.1",
+		"sass-loader": "^12.1.0",
+		"ts-loader": "^9.4.1",
+		"typescript": "^4.9.3"
+	}
 }
