--- a/.editorconfig
+++ b/.editorconfig
@@ -7,7 +7,15 @@ insert_final_newline = true
 indent_style = tab
 indent_size = 2
 trim_trailing_whitespace = true
-ij_continuation_indent_size = 4
+ij_continuation_indent_size = 2
+
+[*.{js,jsx,ts,tsx}]
+ij_javascript_spaces_within_object_literal_braces = true
+ij_typescript_spaces_within_object_literal_braces = true
+ij_javascript_spaces_within_imports = true
+ij_typescript_spaces_within_imports = true
+ij_javascript_spaces_within_brackets = true
+ij_typescript_spaces_within_brackets = true
 
 [*.md]
 trim_trailing_whitespace = false
